CorsConfig setAlowedOriginPatterns 사용, 헤더 중복 설정 제거